objects/ChargentBase__Payment_Request_Configuration__mdt.object
<CustomObject>
    <description>Settings used by the Chargent payment request feature</description>
    <fields>
        <fullName>ChargentBase__Background_url__c</fullName>
        <label>Background url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Billing_Section__c</fullName>
        <defaultValue>(&quot;Billing Address&quot;)</defaultValue>
        <label>Billing Section</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Cancel_Message__c</fullName>
        <label>Cancel Message</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Color__c</fullName>
        <label>Color</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Company_Logo__c</fullName>
        <inlineHelpText>The Id of the Salesforce Document that contains the externally available logo. Only valid when using default payment request page and not when using custom pages</inlineHelpText>
        <label>Company Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Create_Payment_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Payment Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Default_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Failure_Message__c</fullName>
        <label>Failure Message</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Feature_Activation_Request_Was_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a request for activation was already sent to AppFrontier LLC</description>
        <label>Feature Activation Request Was Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Hide_Country_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Country Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Hide_Email_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Email Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Page_Footer__c</fullName>
        <label>Page Footer</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChargentBase__PayForm_Location__c</fullName>
        <inlineHelpText>Applicable ONLY when using default pages and not custom pages</inlineHelpText>
        <label>PayForm Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Payment_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Payment_Button__c</fullName>
        <defaultValue>(&quot;Pay&quot;)</defaultValue>
        <label>Payment Button</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Payment_Logo__c</fullName>
        <label>Payment Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Payment_Request_Link_Expiration__c</fullName>
        <inlineHelpText>The number of DAYS in which the payment link is valid. After this timeframe the links will no longer work and the user will be presented with an expired message</inlineHelpText>
        <label>Payment Request Link Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Payment_Section__c</fullName>
        <defaultValue>(&quot;Payment Info&quot;)</defaultValue>
        <label>Payment Section</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Salesforce_Sites_Page_URL__c</fullName>
        <label>Salesforce Sites Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Show_Country_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Country Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Show_Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Wen set to true an email notification record with the request / response for the Gateway is created for each attempted payment via payment request</inlineHelpText>
        <label>Show Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Show_Email_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Email Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Show_Phone_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show phone number field in Billing Address for Payment Request</description>
        <label>Show Phone Number Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Site_Id__c</fullName>
        <label>Site Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Site_Label__c</fullName>
        <label>Site Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Site_Status__c</fullName>
        <label>Site Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Success_Message__c</fullName>
        <label>Success Message</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Use_Default_Pages__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tells the system to use default pages when creating payment request links and performing other system functions.</description>
        <label>Use Default Pages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Welcome_Text__c</fullName>
        <label>Welcome Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Payment Request Configuration</label>
    <pluralLabel>Payment Request Configurations</pluralLabel>
</CustomObject>